syntax = "proto3";

option go_package = "github.com/rezaindrag/golang-grpc/example_1/model";

package model;

import "google/protobuf/empty.proto";

message GarageUserId {
  string user_id = 1;
}

message GarageAndUserId {
  string user_id = 1;
  Garage garage = 2;
}

service Garages {
  rpc List(GarageUserId) returns (GarageList) {}
  rpc Add(GarageAndUserId) returns (google.protobuf.Empty) {}
}

message GarageCoordinate {
  float latitude = 1;
  float longitude = 2;
}

message Garage {
  string id = 1;
  string name = 2;
  GarageCoordinate coordinate = 3;
}

message GarageList {
  repeated Garage list = 1;
}

message GarageListByUser {
  map<string, GarageList> list = 1;
}