syntax = "proto3";

option go_package = "github.com/rezaindrag/golang-grpc/example_1/model";

package model;

import "google/protobuf/empty.proto";

service Users {
  rpc Register(User) returns (google.protobuf.Empty) {}
  rpc List(google.protobuf.Empty) returns (UserList) {}
}

enum UserGender {
  UNDEFINED = 0;
  MALE = 1;
  FEMALE = 3;
}

message User {
  string id = 1;
  string name = 2;
  string password = 3;
  UserGender gender = 4;
}

message UserList {
  repeated User list = 1;
}